<resources>
    <string name="app_name">HIT CRUNCH</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Developers Student Club, HITK</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">About</string>
    <string name="profile_viewer">Profile</string>
    <string name="about">A Student friendly application that gives you all the resources that you will need in your college. This includes
    notes announcements notices and much more. This application is made under the Developers Student Club - HITK program. Join the
    society to learn and built more such applications and solutions.</string>

    <string name="login"><u>LOGIN with Email</u></string>
    <string name="register"><u>REGISTER</u></string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <!--<string name="default_web_client_id" translatable="false">123.googleusercontent.com</string>-->

    <string-array name="file_type">
        <item>JPEG</item>
        <item>PNG</item>
        <item>PDF</item>
    </string-array>

    <string-array name="deptName">
        <item>Select your Department</item>
        <item>Computer Science and Engg</item>
        <item>Electronics and Communications Engg</item>
        <item>Information Technology</item>
        <item>Applied Electronic and Instrumentation Engg</item>
        <item>Biotechnology</item>
        <item>Electrical Engg</item>
        <item>Chemical Engg</item>
        <item>Mechanical Engg</item>
        <item>Civil Engg</item>
    </string-array>

    <string-array name="yearName">
        <item>Select your Year</item>
        <item>First</item>
        <item>Second</item>
        <item>Third</item>
        <item>Fourth</item>
    </string-array>
    <string-array name="userType">
        <item>Select user type</item>
        <item>Student</item>
        <item>Faculty</item>
    </string-array>
    <string name="title_activity_notes_download">Notes</string>
    <string name="title_activity_notice_viewer">Notice Board</string>
    <string name="title_activity_announcement">Announcements</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="email_id">Email id</string>
    <string name="password">Password</string>
    <string name="login1">LOGIN</string>
    <string name="register_with_email">Register With Email</string>
    <string name="title_activity_question_paper">question_paper</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
