<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="false"
        android:layout_centerHorizontal="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:hint="@string/email_id"
            android:inputType="textEmailAddress"
            android:textAlignment="viewStart"
            android:textSize="12sp"
            android:textColor="@color/primaryText"
             />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pass"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="viewStart"
            android:textColor="@color/primaryText"
            android:textSize="12sp"
             />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/register_button"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pass"
        android:layout_alignParentTop="false"
        android:layout_centerHorizontal="true"
        android:background="@drawable/my_button_bg"
        android:text="@string/login1"
        android:textColor="@color/primaryText"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_button"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="-3dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/forgot_password"
        android:textColor="@color/colorAccent"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forget"
        android:layout_alignParentTop="false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/dont_have"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-614dp"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/colorAccent"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15sp"
            android:clickable="true"
            android:text="@string/register"
            android:textColor="@color/colorAccent"
            android:textSize="15sp" />
    </LinearLayout>

</RelativeLayout>